@@ -1,10 +1,11 @@
 package com.sachin.usermicroservice.config;
 
+import com.sachin.usermicroservice.enums.Role;
+import com.sachin.usermicroservice.filter.ExceptionHandlerFilter;
 import com.sachin.usermicroservice.filter.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -21,66 +22,38 @@ import java.util.List;
 public class SecurityConfiguration {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
-    private final AuthenticationProvider authenticationProvider;
+    private final ExceptionHandlerFilter exceptionHandlerFilter;
 
-    private static final String[] AUTH_WHITELIST ={
-                   "/ats",
-                    "/login",
-                    "/register",
-                    "/users/password/**",
-                    "/users/reset-password-mail",
-                    "/users/token-validation/**",
-    };
-
-  @Bean
-  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-
-   /*   CsrfTokenRequestAttributeHandler requestHandler = new CsrfTokenRequestAttributeHandler();
-      requestHandler.setCsrfRequestAttributeName("_csrf");
-    */
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
 
-      http.cors().
-            configurationSource(request -> {
-              CorsConfiguration config = new CorsConfiguration();
-              config.addAllowedOriginPattern("*");
-              //config.setAllowedOrigins(Collections.singletonList("http://192.168.1.34:3000"));
-              config.setAllowedMethods(Collections.singletonList("*"));
-              config.setAllowCredentials(true);
-              config.setAllowedHeaders(Collections.singletonList("*"));
-              config.setExposedHeaders(List.of("Authorization"));
-              config.setMaxAge(3600L);
-              return config;
-            }
-            ).and()
+        http.cors().
+                configurationSource(request -> {
+                            CorsConfiguration config = new CorsConfiguration();
+                            config.addAllowedOriginPattern("*");
+                            config.setAllowedMethods(Collections.singletonList("*"));
+                            config.setAllowCredentials(true);
+                            config.setAllowedHeaders(Collections.singletonList("*"));
+                            config.setExposedHeaders(List.of("Authorization"));
+                            config.setMaxAge(3600L);
+                            return config;
+                        }
+                ).and()
+                .csrf().disable()
+                .authorizeHttpRequests()
+                .antMatchers(ApplicationConfig.AUTH_WHITELIST)
+                .permitAll()
+                .antMatchers("/users/**").hasRole(Role.ADMIN.name())
+                .anyRequest()
+                .authenticated()
+                .and()
+                .sessionManagement()
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .and()
+                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(exceptionHandlerFilter, JwtAuthenticationFilter.class);
 
-//            .csrf((csrf) -> csrf.csrfTokenRequestHandler(requestHandler).ignoringRequestMatchers("/contact","/register")
-//              .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse()))
-//              .addFilterAfter(new CsrfCookieFilter(), BasicAuthenticationFilter.class)
-
-              .csrf().disable()
-            .authorizeHttpRequests()
-           // .antMatchers(AUTH_WHITELIST)
-              .antMatchers("/**")
-            .permitAll()
-            .anyRequest()
-            .authenticated()
-            .and()
-            //  .oauth2Login().and()
-            .sessionManagement()
-            .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            .and()
-            .authenticationProvider(authenticationProvider)
-            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
-    return http.build();
-  }
+        return http.build();
+    }
 }
-
-/**
-  CORS - cross-origin resource sharing
-       It is a protection provided in modern day browsers, client sends a flight request to server,
-       to know whether the server is ready to accept request from client origin.
-  CSRF - cross-site resource forgery
-       It is enabled by default in spring security, it forbids the put and post request.
- */
